# diligence

./: .env.example  .gitignore  .python-version  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: backend-engineer.md  code-reviewer.md  pipeline-engineer.md  technical-pm.md  web-engineer.md
.claude/skills/ship-it/: SKILL.md
.github/workflows/: ci.yml
docs/: 01-project-brief.md  02-stress-test.md  03-check-catalog.md  04-poc-plan.md  05-architecture.md
evals/: README.md  test_e2e_recall.py  test_extraction_accuracy.py  test_harness_smoke.py
scripts/: build_interview_kit.py  real_accounts_sweep.py  run_extraction_eval.py
src/api/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
src/diligence/: __init__.py  cli.py
src/diligence/checks/: __init__.py  base.py  card_recon.py  charges.py  claim_ledger.py  lease.py  stat_vs_mgmt.py  vat_triangle.py
src/diligence/dataroom/: build.py  spec.py
src/diligence/evals/: e2e.py  ground_truth.py  scoring.py
src/diligence/extraction/: extractor.py  facts_builder.py  pipeline.py  schemas.py
src/diligence/facts/: __init__.py  db.py  model.py
src/diligence/ingest/: __init__.py  classify.py  folder.py
src/diligence/ledger/: __init__.py  aggregates.py  generator.py  models.py
src/web/: README.md  jest.config.ts  package-lock.json  package.json
tests/: test_checks.py  test_external.py  test_extraction.py  test_facts.py  test_ingest.py  test_ledger.py  test_mutations.py  test_render.py  test_report.py  test_review.py  test_shifted_periods.py  test_smoke.py
(+30 files in other folders)
