[project]
name = "diligence"
version = "0.1.0"
description = "AI due-diligence engine for UK small-business acquisitions"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.95",
    "pydantic>=2.7",
    "reportlab>=4.1",
    "pypdfium2>=4.28",
    "pillow>=10.3",
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.4",
]

[project.scripts]
diligence = "diligence.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diligence"]

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests", "evals"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/diligence/report/html.py" = ["E501"]  # inline CSS reads better unwrapped
